# code_agent

./: .gitignore  README.md  TODO  main.py  pyproject.toml
agent/: agent.py
llm/: openrouter.py
service/: __init__.py
service/code_executor/: Dockerfile  __init__.py  client.py  requirements.txt  restart.sh  server.py  tool.py
service/code_executor/proto/: code_executor.proto
service/jupyter_kernel/: Dockerfile  kernel.json  kernel_init.py  restart.sh  tools.py
tool/: tool.py
utils/: chat_formatter.py  config.py  logging.py
webapp/: main.py  pyproject.toml
webapp/agent/: agent.py  code_executor_pb2.py  code_executor_pb2_grpc.py  grpc_client.py  jupyter_agent.py  jupyter_kernel.py  manager.py
webapp/tool/: tool.py
webapp/utils/: config.py  manager_prompt.txt  prompt.txt  prompt.yaml
