[project]
name = "ai-chatbot"
version = "0.1.0"
description = "A Python-based AI chatbot using FastAPI and OpenAI's API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "pydantic",
    "pyyaml",
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
required-version = ">=0.1.0"
